--- a/templates/celsius.html
+++ b/templates/celsius.html
@@ -20,8 +20,8 @@
     <div id="page" class="page">
       <p id="loader" style="display: block;">Loading...</p>
       <div id="weather" class="weather"></div>
-      <a href="https://weather.s40.repl.co/metric">Metric units</a>
+      <a href="https://weather.s40.repl.co/">Imperial units</a>
     </div>
-    <script>getWeather('imperial', '℉');</script>
+    <script>getWeather('metric', '℃');</script>
   </body>
 </html>
