--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    border-bottom: 3px solid #B07075
+    border-bottom: 3px solid #1FBFAF;
   }
   .headerText {
     display: block;
@@ -95,7 +95,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    border-bottom: 3px solid #693A3F;
+    border-bottom: 3px solid #178C81;
   }
   .headerText {
     display: block;
